minor bug fixes & css to dialogs
just went on fixing some bugs, java style rules and added very little css to the dialogs

work was really slow today due to the fact i fainted in the early morning and had gone to the hospital, been recovering and got better now

got the account deletion fully working, there was a bug that never made it being deleted. the problem was that i added the wrong button to the code, and fix was just simply removing that and putting the correct one.

tomorrow i am gonna try to get the account creation thing working as the main functions of the project are almost done, just very little left, mainly edit and view are remaining but have started somewhat

as well tomorrow, i am gonna be refactoring the whole data.json file since the ID part is not needed

--- a/Verkefni/src/main/resources/hi/verkefni/vidmot/CSS/style.css
+++ b/Verkefni/src/main/resources/hi/verkefni/vidmot/CSS/style.css
@@ -82,3 +82,7 @@
  * dialogs
  */
 
+.deleteButtonDialog {
+    -fx-background-color: red;
+    -fx-text-fill: white;
+}
